--- a/output/team.html
+++ b/output/team.html
@@ -1,55 +1,71 @@
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <script src="https://use.fontawesome.com/c59e55c46d.js"></script>
-    <link rel="stylesheet" href="..//assets/style.css" />
-    <title>Team Profile Generator</title>
-  </head>
 
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://use.fontawesome.com/c59e55c46d.js"></script>
+    <link rel="stylesheet" href="..//assets/style.css"/>
+    <title>Team Profile Generator</title>
+</head>
+
+<body>
     <header>
-      <h1>My Team</h1>
+        <h1>My Team</h1>
     </header>
-    <main>
-      //Bootstrap code
-      <div class="card" style="width: 18rem">
-        <div class="card-header">
-          jorge <br />
-          <i class="fas fa-mug-hot"></i>Manager
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">ID: 8888</li>
-          <li class="list-group-item">
-            Email:
-            <span id="email"> <a href="mailto:undefined"></a>undefined </span>
-          </li>
-          <li class="list-group-item">office number:9999</li>
-        </ul>
+    <main> 
+    <div class='card' style='width: 18rem;'>
+      <div class='card-header'>
+        Jorge <br />
+        <i class='fas fa-mug-hot'></i>Manager
       </div>
-      <div class="card" style="width: 18rem">
-        <div class="card-header">
-          jkahkdjfakjf <br />
-          <i class="fas fa-mug-hot"></i>engineer
+      <ul class='list-group list-group-flush'>
+        <li class='list-group-item'>ID: 12345</li>
+        <li class='list-group-item'>
+          Email:
+          <span id='email'>
+            <a href='mailto:jorge@gmail.com'></a>jorge@gmail.com
+          </span>
+        </li>
+        <li class='list-group-item'>office number:704-991-5072</li>
+      </ul>
+    </div>
+      <div class='card' style='width: 18rem;'>
+        <div class='card-header'>
+          Greg <br />
+          <i class='fas fa-mug-hot'></i>engineer
         </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">ID: annenrnr</li>
-          <li class="list-group-item">
+        <ul class='list-group list-group-flush'>
+          <li class='list-group-item'>ID: 124578</li>
+          <li class='list-group-item'>
             Email:
-            <span id="email">
-              <a href="mailto:mmemr">mmemr</a>
+            <span id='email'>
+              <a href='mailto:greg@gmail.com'>greg@gmail.com</a>
             </span>
           </li>
         </ul>
       </div>
+    
+    <div class='card' style='width: 18rem;'>
+        <div class='card-header'>
+          Max <br />
+          <i class='fas fa-user-graduate'></i>intern
+        </div>
+        <ul class='list-group list-group-flush'>
+          <li class='list-group-item'>ID: 9874596</li>
+          <li class='list-group-item'>
+            Email:
+            <span id='email'>
+              <a href='mailto: max@gmail.com'>max@gmail.com</a>
+            </span>
+          </li>
+          <li class='list-group-item'>school: redFox School </li>
+        </ul>
+      </div>
+    
     </main>
-  </body>
+</body>
 </html>
